--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.2.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.immobylette.api.main</groupId>
+	<groupId>com.immobylette</groupId>
 	<artifactId>immobylette--api-main</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>immobylette--api-main</name>
