--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
 version: '3'
 services:
   app:
-    image: immobylette-api-main:latest
-    build:
-      context: src/main/java/com/immobylette/api/main/service
+    image: immobylette--api-main:feat-couscous
     ports:
       - 8080:8080
       - 8081:8081
     environment:
       - SPRING_PROFILES_ACTIVE=local
-      - DB_HOST=database:5432
+      - DB_HOST=db
       - DB_NAME=immobylette
       - DB_USER=postgre
       - DB_PASSWORD=fakesecret
