feat: add needs setups on jobs

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,7 @@ jobs:
 
   build:
     name: Build Snapshot and Push
+    needs: setup
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' || !(github.ref == 'refs/heads/main')
 
@@ -59,6 +60,7 @@ jobs:
 
   release:
     name: Build Release and Push
+    needs: setup
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
 
