--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,14 +22,6 @@ jobs:
           distribution: 'adopt'
           java-version-file: '.java-version'
 
-      - name: Extract branch name
-        shell: bash
-        run: |
-          echo "GITHUB_HEAD_REF: $GITHUB_HEAD_REF"
-          echo "GITHUB_REF: $GITHUB_REF"
-          echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
-        id: extract_branch
-
       - name: Build with Maven
         run: mvn clean install -DskipTests
 
@@ -48,7 +40,7 @@ jobs:
 
       - name: Format image name
         run: |
-          TAG_NAME=$(echo "${{ steps.extract_branch.outputs.branch }}" | sed 's/[^a-zA-Z0-9]/-/g' | tr '[:upper:]' '[:lower:]')
+          TAG_NAME=$(echo "${{GITHUB_HEAD_REF}}" | sed 's/[^a-zA-Z0-9]/-/g' | tr '[:upper:]' '[:lower:]')
           echo "::set-output name=TAG_NAME::TAG_NAME"
 
       - name: Configure Docker
