--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,9 +22,10 @@ jobs:
           distribution: 'adopt'
           java-version-file: '.java-version'
 
-      - name: Get branch names.
-        id: branch-names
-        uses: tj-actions/branch-names@v8
+      - name: Extract branch name
+        shell: bash
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+        id: extract_branch
         
       - name: Build with Maven
         run: mvn clean install -DskipTests
@@ -44,7 +45,7 @@ jobs:
 
       - name: Format image name
         run: |
-          echo "Running on pr: ${{ steps.branch-names.outputs.current_branch }}"
+          echo "Running on pr: ${{ steps.extract_branch.outputs.branch }}"
           TAG_NAME=$(echo "${{ steps.branch-names.outputs.current_branch }}" | sed 's/[^a-zA-Z0-9]/-/g' | tr '[:upper:]' '[:lower:]')
           echo "::set-output name=TAG_NAME::TAG_NAME"
 
