feat: format branch name

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,10 +43,12 @@ jobs:
         uses: tj-actions/branch-names@v8
 
       - name: Format image name
+        id: format-image-name
         run: |
           echo "Running on pr: ${{ steps.branch-names.outputs.current_branch }}"
-          TAG_NAME=$(echo "${{ steps.branch-names.outputs.current_branch }}" | sed 's/[^a-zA-Z0-9]/-/g' | tr '[:upper:]' '[:lower:]')
+          BRANCH_FORMATTED=$(echo "${{ steps.branch-names.outputs.current_branch }}" | sed 's/[^a-zA-Z0-9]/-/g' | tr '[:upper:]' '[:lower:]')
           echo "::set-output name=TAG_NAME::TAG_NAME"
+          echo "{TAG_NAME}={BRANCH_FORMATTED}" >> $GITHUB_OUTPUT
 
       - name: Configure Docker
         run: |
@@ -54,8 +56,8 @@ jobs:
 
       - name: Build and Push Snapshot
         run: |
-          docker build -t europe-west9-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/immobylette--api-main/immobylette--api-main:${{ steps.build.outputs.TAG_NAME }} .
-          docker push europe-west9-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/immobylette--api-main/immobylette--api-main:${{ steps.build.outputs.TAG_NAME }}
+          docker build -t europe-west9-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/immobylette--api-main/immobylette--api-main:${{ steps.build.outputs.BRANCH_FORMATTED }} .
+          docker push europe-west9-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/immobylette--api-main/immobylette--api-main:${{ steps.format-image-name.outputs.BRANCH_FORMATTED }}
   
 
   release:
