--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,6 +47,7 @@ jobs:
         uses: google-github-actions/auth@v1
         with:
           token_format: access_token
+          workload_identity_provider: projects/943691551417/locations/global/workloadIdentityPools/1000/providers/1000
           service_account: ${{ secrets.GCP_SA_KEY }}
 
       - name: Login to GAR
