--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           token_format: access_token
           workload_identity_provider: projects/943691551417/locations/global/workloadIdentityPools/1000/providers/1000
-          service_account: ${{ secrets.GCP_SA_KEY }}
+          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY}}
 
       - name: Login to GAR
         uses: docker/login-action@v3
