--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,23 +38,24 @@ jobs:
           echo "Branch : ${BRANCH_FORMATTED}" 
           echo "TAG_NAME=$BRANCH_FORMATTED" >> "$GITHUB_OUTPUT"
 
-      - name: Configure Docker
-        run: |
-          gcloud auth configure-docker europe-west9-docker.pkg.dev
+#      - name: Configure Docker
+#        run: |
+#          gcloud auth configure-docker europe-west9-docker.pkg.dev
 
       - name: Authenticate to Google Cloud
         id: auth
-        uses: google-github-actions/auth@v1
+        uses: google-github-actions/setup-gcloud@main
         with:
-          workload_identity_provider: projects/943691551417/locations/global/workloadIdentityPools/1000/providers/1000
-          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY}}
+          export_default_credentials: true
+          service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Login to GAR
-        uses: docker/login-action@v3
-        with:
-          registry: europe-west9-docker.pkg.dev
-          username: oauth2accesstoken
-          password: ${{ steps.auth.outputs.access_token }}
+#      - name: Login to GAR
+#        uses: docker/login-action@v3
+#        with:
+#          registry: europe-west9-docker.pkg.dev
+#          username: oauth2accesstoken
+#          password: ${{ steps.auth.outputs.access_token }}
 
       - name: Build and Push Snapshot
         env:
@@ -62,6 +63,7 @@ jobs:
         run: |
           echo "Building image for branch $TAG_NAME"
           docker build -t europe-west9-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/immobylette--api-main/immobylette--api-main:TAG_NAME .
+          gcloud auth configure-docker europe-west9-docker.pkg.dev
           docker push europe-west9-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/immobylette--api-main/immobylette--api-main:TAG_NAME
   
 
