--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,9 +38,7 @@ jobs:
           echo "Branch : ${BRANCH_FORMATTED}" 
           echo "TAG_NAME=$BRANCH_FORMATTED" >> "$GITHUB_OUTPUT"
 
-#      - name: Configure Docker
-#        run: |
-#          gcloud auth configure-docker europe-west9-docker.pkg.dev
+
 
       - name: Authenticate to Google Cloud
         id: auth
@@ -49,6 +47,10 @@ jobs:
           export_default_credentials: true
           service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+      - name: Configure Docker
+        run: |
+          gcloud auth configure-docker europe-west9-docker.pkg.dev
 
 #      - name: Login to GAR
 #        uses: docker/login-action@v3
@@ -63,7 +65,6 @@ jobs:
         run: |
           echo "Building image for branch $TAG_NAME"
           docker build -t europe-west9-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/immobylette--api-main/immobylette--api-main:TAG_NAME .
-          gcloud auth configure-docker europe-west9-docker.pkg.dev
           docker push europe-west9-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/immobylette--api-main/immobylette--api-main:TAG_NAME
   
 
