--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,11 @@
 			<artifactId>httpclient5</artifactId>
 			<version>${httpclient5.version}</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
