[UPDATE] max file/request size

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,10 @@ spring:
     generate-ddl: false
     show-sql: true
     hibernate.ddl-auto: none
+  servlet:
+    multipart:
+      max-file-size: 8MB
+      max-request-size: 8MB
 
 server:
   port: 8080
